# dn

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  REUSE.toml  build.zig.zon  default.nix  example_config.toml  justfile  makefile  rustfmt.toml  style_guide.md
.github/workflows/: cargo.yaml  ci.yaml
completions/: _dn  _dn.ps1  dn.bash  dn.elv  dn.fish  dn.nu
docs/: commands.md  config.md  configuration.md  filenames.md  frontmatter.md  templates.md
docs/changelog/: 0.1.0.md
docs/dev/: integrations.md
docs/examples/: aliases.md  commands.md  dn.toml  journal.md  silos.md  zettelkasten.md
docs/examples/workflows/: blog.md  journal.md  silos.md  tasks.md  writing.md  zettelkasten.md
docs/reference/: commands.md  configuration.md  filename.md  frontmatter.md  templates.md
examples/: commands.md  dn.toml
man/: dn-new.1  dn-rename.1  dn.1  dn.1.md
src/: args.rs  cli.rs  config.rs  content.rs  directory.rs  file.rs  filename.rs  filename_parse.rs  format.rs  frontmatter.rs  frontmatter_parse.rs  lib.rs  main.rs  main.zig  metadata.rs  parse.rs  parsers.rs
xtask/: Cargo.toml
xtask/src/: completions.rs  main.rs  manpages.rs
