[package]
name = "dn"
version = "0.1.0"
# description = ""
edition = "2021"
license = "GPL-3.0-or-later"
license-file = "LICENSE.txt"
repository = "https://github.com/mmibbetson/dn"
# homepage = "https://mmibbetson.github.io/dn"

[dependencies]
anyhow = "1.0.92"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
once_cell = "1.20.2" # When Lazy is stabilised in Rust Stable, can remove this.
regex = "1.11.1"
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"

[lints.clippy]
all = "deny"
pedantic = "deny"
cargo = "warn"
