# SPDX-FileCopyrightText: 2024 Matthew Mark Ibbetson
# SPDX-FileContributor: Matthew Mark Ibbetson
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "xtask"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
dn = { path = "../" }
clap.workspace = true
clap_complete = "4.5.38"        # MIT or Apache-2.0
clap_complete_nushell = "4.5.4" # MIT or Apache-2.0
